compiler/src/test/resources/amyc/typer/failing/ConstructorError1.amy
module ConstructorError
  abstract class Foo 
  case class Bar(i: Int) : Foo

  Bar(true)
end ConstructorError
